compiler/tests-spec/testData/psi/templates/identifiers/catchBlock.kt
fun f() {
    try {} catch (<!ELEMENT!>: Any) {}

    try {} catch (@a <!ELEMENT!>: Any) {}
}
